# ChangeLog for app-laptop/tlp
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*tlp-0.3.7.901_pre20130126 (26 Jan 2013)
	26 Jan 2013; Andre Erdmann <dywi@mailerd.de> tlp-0.3.7.901_pre20130126.ebuild :

	added tlp devel version 0.3.7.901 (as of Jan 26 2013)

	Notable changes:
	* (selectively) disable radio devices when the hardware switch is turned on
	* tlp-pcilist
	* use iw instead of iwconfig (if available)
	* Bugfixes/Workarounds for the cpu boost feature

*old ebuilds removed (25 Jan 2013)
	25 Jan 2013; Andre Erdmann <dywi@mailerd.de> tlp-0.3.6.900.ebuild :

	old ebuild removed as announced in package.mask

*tlp-0.3.7.901_pre20130120 (20 Jan 2013)
	20 Jan 2013; Andre Erdmann <dywi@mailerd.de> tlp-0.3.7.901_pre20130120.ebuild :

	added tlp devel version 0.3.7.901 (as of Jan 20 2013),
	masked for testing

	Notable changes:
	* patches listed in tlp-0.3.7.1 (see below) have been applied upstream
	* Enable/Disable dynamic overclocking ("Turbo Boost")
	* option RUNTIME_PM_ALL that enables runtime pm
	  for _all_ PCI(e) devices (EXPERIMENTAL)
	* discharge_battery() catches SIGINT now
	* power hook en-/disabling work properly now, without risking
	  file collision with user-created files

*tlp-0.3.7.901 (12 Jan 2013)
	12 Jan 2013; Andre Erdmann <dywi@mailerd.de> tlp-0.3.7.901_pre20130103.ebuild :

	added tlp devel version 0.3.7.901 (as of Jan 03 2013),
	masked for testing

*tlp-0.3.7.1 (12 Jan 2013)
	12 Jan 2013; Andre Erdmann <dywi@mailerd.de> tlp-0.3.7.1.ebuild, metadata.xml :

	added TLP 0.3.7.1, same as tlp-0.3.7_p1 with the following differences:
	* reports itself as 0.3.7.1
	* new USE flags, optional dependencies are represented by one flag now
	  instead of per-dependency flags
	* includes the tlp-usblist output + tlp-stat needs_root_priv patches
	* build system changed: using upstream git repo + gentoo-additions tarball
	* depends on virtual/udev instead of sys-fs/udev,
	  reported by antoligy (github issue #1)
