@@ -11,7 +11,8 @@ EBUILD tlp-0.3.6-r1.ebuild 3995 SHA256 ec43b6d639161e1e58fd92e8cff491f7f6735b798
 EBUILD tlp-0.3.7.1.ebuild 5483 SHA256 06cf488c4133a367bd9cea53d691400b4942b843588fc0954d11b4307a13dc1a SHA512 d1130660eaf4498ca0831f396bc67f3ddc4a4e37a706155d6e188f86b31c0bdbf0bc7aa4c59d630597dc7ca1dfe40c0e50ec35fcfd7fd07e9ad423818446ae8e WHIRLPOOL 884c86c57d6c5e22d8c27484134412292950c072ee7a83eab265a077700e772c46056b18be8d21cab43ae6f7d9214f117a80d47cd013c11ae7b612d82afab1b0
 EBUILD tlp-0.3.7.901_pre20130103.ebuild 6039 SHA256 b53f7477a885611df8172f680c2038ff4c72aac3ed552bfdd63dc967d7cc5cf6 SHA512 1fde2d8495b10c2ef900fa810f6dcec29cd688ce18ccaa0c0ad5a841d995f59505fb25291cd1c561855ed5097d9ccfee380c451a5009ed2d1e600c7857da16c2 WHIRLPOOL 762701a7d6906d4407c2ee1eceaaec47d832b5e8f8b65d125f2651d049c8343f3c527e6f678421751b1d5e4cabc103f6b8e64397d3fabd8bd90dc21867e3f2ad
 EBUILD tlp-0.3.7.901_pre20130120.ebuild 8051 SHA256 e33850498458ae1eec56d3e2112326ce6ff953c389fd8a866166d6c2ddf6ceec SHA512 750f7ad47d7d5687bd4761272144928e321ff6f5c996b665e1f058a1193ae4f3b5e42afd2f1317daa9b6c05436fd43989cd11a07bbed8d7ba1b5128e78c36911 WHIRLPOOL 8e9b4a1327fd497b189e19e3df75eb39eee4c90b08f0fa78a0b136c12a2cfe2e944a26c805ae9f754b60b1de2738b5e9bf6d43af23612d5640e2fdd695bcad69
+EBUILD tlp-0.3.7.901_pre20130126-r1.ebuild 8392 SHA256 06ac3d51bc5633fb3f759f5167f725da52a7ee80c272211c91c3757520b6b374 SHA512 4415fee35950ed3e51805c6b98fa0be80d92645c103a9782bf46eef57607a3e1367a9655af7bfefc0f9c738bd7ae28cb2383dccad410f058487044048f28452b WHIRLPOOL 6d6b5cd692c8af3583bd1622c78a98cf9b199c9185abb14a6ef736ab4b5d2287e40746d0e2d29e96f6d460b1d62d3c204d3682e9c90c00d800964ec840084caf
 EBUILD tlp-0.3.7.901_pre20130126.ebuild 8297 SHA256 24207111bc57778073f846dbd15af861e39d093d560a712cca313f311cc041af SHA512 bccc9533d3aee00d9443e40b5336a1ebe19325ae753d5d50b08bc62e54f7760bfae4dc353e108ac5f204e4662e10754f5d16f6243faedc4ed614e67a455dec30 WHIRLPOOL e6feb1ab5ce44c3816cec7be15ccd2fc6b7e374e859ee5b242273f84e5f54da1c4a2c4daf4facd3b30e2a43027f9b64cae474def02373b2bbe12aa2b5e6894bc
 EBUILD tlp-0.3.7_p1.ebuild 4261 SHA256 6169c496f2d94d28b14566a047621a2449145d071b21a20b41439a1aed584c01 SHA512 61ea2b90755c29d3eaf3d9265ecba4f3487c2154fee14ece34c18ce4f0b07833fa9df72f2c36dbcb611135c784c9964f1a889df9fac80de235b8f00e520a4d07 WHIRLPOOL bb523fc02b3fe36a54ff863044377f9032d90476443a12a90b097918f296456f785c68a5379f0a05737920d13d46f7fabe3bb22306853cc0532496fe1e816fe1
-MISC ChangeLog 4606 SHA256 53023ac40316941130f8e9c88d437708a8b6d05543ea13c92b4bec93ad711f0e SHA512 05208d7672cd0d07d90e2342061e2ca8ddd81e2aedb88fd61e2956fb359bb2fae1f8713a867a9543eaeb377e3f553c62ac0bb616a3a88edb882b1f76a9dc02f9 WHIRLPOOL 823f1c27837be68adb345e3bfa13e93d08fb9233194afc6767f3c4cc312d189f57b40f62c2d49b9a70db1e5039a019a6adfc2e7ae606d0dc35019bfa6cc75182
+MISC ChangeLog 4991 SHA256 66966340492020f953c26648b3ec28e5f0ec29f3ad8a99847585531c51b234c7 SHA512 6704513a8007cdfb7637067f6696974b1d6433513e9afef62ca9f941637ca727dc429eea21856760f06e216f891ef769ecee2ba6be9ffdf76f3e3a8a5346b332 WHIRLPOOL 146fe227f183630f4e456f9f128716e3807301e8fe29feb3c25a01569aee0ec4764ce00fc9b641349011853ed85c1cb0e20d06db0900b22aa101b26187af96b6
 MISC metadata.xml 2739 SHA256 7d8904c65e6ef78cabdf40eeac202124ba4c957dedc77290e092566151ef065e SHA512 63a2711290faf416b1b0e0c9ab9f0dad2bb5cc48807e790ba4a6b3b12372d88e19e30d3ff19c9199bbe3edbd0f258ff93bc427e4bd586ab8c69f45cb5c242f02 WHIRLPOOL 46c28b9e19dd9f330901c67609358830223dc6cac3dbca42a1429da4c8b0f6aef0a5a480fc99c7d2bb6a97f3cdf476cf16a7c2eed6ac114af09271534ea7a40d
