@@ -2,6 +2,14 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*tlp-0.3.7.901_pre20130126-r1 (26 Jan 2013)
+	26 Jan 2013; Andre Erdmann <dywi@mailerd.de> tlp-0.3.7.901_pre20130126-r1.ebuild :
+
+	same as tlp-0.3.7.901_pre20130126 with the following differences:
+	* added dependency on sys-power/acpid
+	* depend on any-of net-wireless/iw net-wireless/wireless-tools (in that order)
+	* added note during pkg_postinst() that acpid has to be restarted
+
 *tlp-0.3.7.901_pre20130126 (26 Jan 2013)
 	26 Jan 2013; Andre Erdmann <dywi@mailerd.de> tlp-0.3.7.901_pre20130126.ebuild :
 
